--- a/index/index.html
+++ b/index/index.html
@@ -65,56 +65,80 @@
     </section>
     <section class="Designing">
         <div class="container wors-n1">
+            <div class="recent" style="height: 100px; font-size: 40px;">
+                <h3>Recent posts</h3>
+            </div>
             <div class="wors">
                 <div class="nav">
-                    <div class="img">
+                    <div class="img"></div>
+                    <div>
                         <h1>Designing Dashboards</h1>
-                        <div>
+                        <div class="imgs-1">
                             <div class="img-2"></div>
                             <h3>Dashboard</h3>
 
                         </div>
 
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                            officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                            amet.</p>
                     </div>
 
-                    <div class="nav">
-                        <div class="img">
-                            <div>
-                                <h1>Designing Dashboards</h1>
-                                <div>
-                                    <div class="img-2"></div>
-                                    <h3>Dashboard</h3>
-
-                                </div>
-
-                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-                                    officia
-                                    consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="nav">
-                            <div class="img">
-                                <h1>Designing Dashboards</h1>
-                                <div>
-                                    <div class="img-2"></div>
-                                    <h3>Dashboard</h3>
-
-                                </div>
-
-                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
-                                    amet.</p>
-
-                            </div>
-                        </div>
-                    </div>
                 </div>
+                <div class="nav">
+                    <div class="img"></div>
+                    <div>
+                        <h1>Designing Dashboards</h1>
+                        <div class="imgs-1">
+                            <div class="img-2"></div>
+                            <h3>Dashboard</h3>
+
+                        </div>
+
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                            officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                            amet.</p>
+                    </div>
+
+                </div>
+                <div class="nav">
+                    <div class="img">
+                    </div>
+                    <div>
+                        <h1>Designing Dashboards</h1>
+                        <div class="imgs-1">
+                            <div class="img-2">
+                                <h3 style="color: aliceblue; margin-left: 5px ;">2018</h3>
+                            </div>
+                            <h3>Dashboard</h3>
+
+                        </div>
+
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                            officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                            amet.</p>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        </div>
     </section>
+    <footer class="futer">
+        <div class="container blok">
+            <div class="blok-1">
+                <div class="blok-2">
+                    <div class="img"></div>
+                    <div class="img"></div>
+                    <div class="img"></div>
+                    <div class="img"></div>
+                    <div class="img"></div>
+                </div>
+              
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
